--- a/css/abstracts/_mixins.scss
+++ b/css/abstracts/_mixins.scss
@@ -1,3 +1,31 @@
-    @mixin transition ($secondes) {
-    transition: $secondes all ease-in-out;
+@mixin trans  {
+    transition: .3s all ease-in-out;
+}
+@mixin bar{
+    font-family: 'Barlow', sans-serif;
+}
+@mixin roboto{
+    font-family: 'Roboto', sans-serif;
+}
+@mixin center{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+@mixin before{
+    content: '';
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: rgba(0, 0, 0, 0.302);
+}
+@mixin page{
+    width:1100px;
+    margin: 0 auto;
+}
+@mixin red{
+
 }
