--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,4 @@
-@import 'pages/home';
+
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
 
@@ -10,4 +10,8 @@
 @import 'layout/global';
 @import 'layout/header';
 @import 'layout/nav';
+@import 'pages/firstblock';
+@import 'pages/secondblock';
+@import 'pages/thirdblock';
+@import 'pages/trendingnews';
 
