--- a/css/pages/_trendingnews.scss
+++ b/css/pages/_trendingnews.scss
@@ -2,9 +2,31 @@
     @include page;
     background: #f4f4f4;
     margin-top: 2em;
+    margin-bottom: 5em;
 }
 .imgtrendingcontainer{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    align-items: center;
+    justify-content: center;
+    gap: 3em;
+}
+.imgtrending{
+    display: flex;
+    flex-direction: column;
+    @include roboto;
+    position: relative;
+   
+}
+.trendingnewstext{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding: 18px;
+    background-color: white;
+    border-top-right-radius: 10px;
+    h4{
+        margin-bottom: 0;
+        margin-top: 5px;
+    }
+
 }
