--- a/css/style.scss
+++ b/css/style.scss
@@ -1,17 +1,16 @@
 
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
-
 @import 'base/normalize';
 @import 'base/typographie';
-
-@import 'layout/footer';
-@import 'layout/forms';
 @import 'layout/global';
-@import 'layout/header';
+@import 'pages/header';
 @import 'layout/nav';
 @import 'pages/firstblock';
 @import 'pages/secondblock';
 @import 'pages/thirdblock';
 @import 'pages/trendingnews';
+@import 'pages/footer';
+
+@import 'about/about';
 
