--- a/css/pages/_header.scss
+++ b/css/pages/_header.scss
@@ -5,7 +5,11 @@
     height: 50px;
     display: flex;
     @include roboto;
-    font-size: 14px
+    font-size: 14px;
+    @media screen and (max-width:768px){
+        display: none;
+        
+    }
 }
 .trendingtitlecontainer{
     @include page;
@@ -13,6 +17,7 @@
     justify-content: space-between;
     align-items: center;
     color: gray;
+   
     .left i{
         color: #ff2143;
         margin-right: 5px;
@@ -30,7 +35,23 @@
    display: flex;
    justify-content: space-between;
    align-items: center;
-   padding:7px 0
+   padding:7px 0;
+   img:nth-of-type(2){
+    @media screen and (max-width:768px){
+       width:80%;
+       margin:0 auto
+        
+    }
+   }
+   
+   
+   img:nth-of-type(1){
+    @media screen and (max-width:768px) {
+        display: none;
+        
+    }
+
+}
 }
 
 // navigation
@@ -67,11 +88,19 @@ nav{
     display: flex;
     justify-content: center;
     border-left: 1px solid white;
+    @media screen and (max-width:1000px) {
+        display: none;
+        
+    }
 }
 .searchbutton{
     justify-content: center;
     border-right: 1px solid white;
     border-left: 1px solid white;
+    @media  screen and (768px) {
+        display: none;
+        
+    }
 }
 
 // transition socials
