--- a/css/pages/_secondblock.scss
+++ b/css/pages/_secondblock.scss
@@ -4,10 +4,14 @@
 
 .news{
     display: grid;
-    grid-template-columns: 6fr 4fr;
+    grid-template-columns: 3fr 2fr;
     gap: 2em;
     img{
         width: 100%;
+    }
+    @media screen and (max-width:1000px) {
+        grid-template-columns: 1fr;
+        
     }
 }
 
