--- a/css/about/_about.scss
+++ b/css/about/_about.scss
@@ -7,14 +7,11 @@
     
 }
 .textwrapperourmission{
-    padding: 40px 0;
-    @include page;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    margin-top: 60px;
-    margin-bottom: 60px;
+     margin-left: 3em;
+  
   
 }
 .ourmissiontext{
