--- a/css/pages/_footer.scss
+++ b/css/pages/_footer.scss
@@ -5,39 +5,55 @@
     align-items: center;
     margin-bottom: 5em;
     cursor: pointer;
+    @media screen and (max-width: 1400px){
+        width: 70%;
+    }
 }
-
+.footerbannerimg{
+    width: 80%;
+    img{
+        width: 100%;
+    }
+}
 //Footer
 
 footer{
     background-color: black;
+    padding:20px;
+    
     
 }
 .footercontainer{
     @include page;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    gap: 2em;
+    gap: 4em;
     color: rgb(245, 235, 235);
+    padding: 20px 0;
+    margin-bottom: 30px;
     @include roboto;
-   
-    
     img{
         width: 100%;
-}
+    }     
+    @media screen and (max-width: 1400px){
+        grid-template-columns: 1fr 1fr;
+        
+    }
+    @media screen and (max-width: 768px){
+        grid-template-columns: 1fr;
+        
+    }  
 .columnfooter:nth-of-type(1){
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     font-size: 14px;
+    gap: 1em;
     color: #9fa6bd;
-    padding: 30px;
-    
-    
+    padding: 30px 0 0;
     img{
     width: 40%;
     margin-left: 0;
-       
     }
 }
 .popularpostwrapper{
