--- a/css/pages/_header.scss
+++ b/css/pages/_header.scss
@@ -17,6 +17,8 @@
     justify-content: space-between;
     align-items: center;
     color: gray;
+
+  
    
     .left i{
         color: #ff2143;
@@ -29,6 +31,11 @@
         text-transform: uppercase;
     }
 }
+#ktm{
+    @media screen and (max-width:1000px) {
+        display: none;
+    }
+}
 // deuxieme header
 .logo{
    @include page;
@@ -38,8 +45,12 @@
    padding:7px 0;
    img:nth-of-type(2){
     @media screen and (max-width:768px){
-       width:80%;
+       width:60%;
        margin:0 auto
+        
+    }
+    @media screen and (max-width:1100px) {
+        width:80%;
         
     }
    }
@@ -62,6 +73,7 @@ nav{
 .navwrapper{
     display: grid;
     grid-template-columns: 8fr 2fr 1fr;
+    align-items: center;
     height: 80px;
     @include page;
     @include roboto;
@@ -83,6 +95,10 @@ nav{
     &:nth-of-type(5){
         border-right: none;
     }
+    @media screen and (max-width:768px) {
+        display: none;
+        
+    }
 }
 .socialright{
     display: flex;
@@ -97,8 +113,59 @@ nav{
     justify-content: center;
     border-right: 1px solid white;
     border-left: 1px solid white;
-    @media  screen and (768px) {
+    @media  screen and (max-width:768px) {
         display: none;
+        
+    }
+}
+
+//Burgermenu
+
+.burgermenu{
+
+    width: 40px;
+    height:40px;
+    display: none;
+    cursor: pointer;
+    @include trans;
+    
+        .line{width: 70%;
+            color: white;
+            border: 2px solid white;
+            border-radius: 5px;
+        
+        }
+     @media screen and (max-width:768px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        
+     }   
+}
+#hamburger-12.active .line:nth-child(1){
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  
+  #hamburger-12.active .line:nth-child(3){
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    -o-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+
+
+
+//logo responsive
+
+.logoresponsive{
+    display: none;
+    @media  screen and (max-width:768px) {
+        display: block;
         
     }
 }
