--- a/css/pages/_secondblock.scss
+++ b/css/pages/_secondblock.scss
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
    
+   
     margin-bottom: 2em;
     @include roboto;
     .textnewsleft{
@@ -33,6 +34,11 @@
         justify-content: space-between;
         align-items: center;
         padding: 10px;
+        @media screen and (max-width:1200px) {
+            flex-direction: column;
+            align-items: flex-start;
+            
+        }
     }
 }
 .columnleft_left{
@@ -55,6 +61,7 @@
 }
 .textnewsleft{
     font-size: 17px;
+   
     .links a{
         color: black;
         @include trans;
@@ -69,12 +76,27 @@
     grid-template-columns: 1.5fr 1fr;
     gap: 2em;
     padding: 10px;
-    
+  
+    @media screen and (max-width:1400px) {
+       grid-template-columns: 1fr;
+        
+    }
 }
 .columnleft_right{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 1em;
+    @media screen and (max-width:1400px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+         
+     }
+     @media screen and (max-width:768px) {
+        display: grid;
+        grid-template-columns: 1fr;
+         
+     }
 }
 .smallnews{
     display: grid;
@@ -98,7 +120,6 @@
     padding: 5px;
     display: flex;
     flex-direction: column;
-    
     justify-content: space-evenly;
     span{
         text-transform: uppercase;
@@ -150,6 +171,8 @@
     padding: 20px;
     gap: 1em;
     margin-bottom: 2em;
+ 
+    
 }
 .smallrectangle{
     display: grid;
@@ -159,8 +182,10 @@
     border:1px solid rgba(128, 128, 128, 0.234);
     border-radius: 10px;
     padding: 10px;
+    
     img{
         width: 100%;
+        cursor: pointer;
     }
     .smallrectangletext{
         @include roboto;
@@ -245,8 +270,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-
-
     span{
         @include roboto;
         font-size:  16px;
