--- a/css/pages/_header.scss
+++ b/css/pages/_header.scss
@@ -11,6 +11,12 @@
         
     }
 }
+.left span:nth-of-type(2){
+    @media screen and (max-width:1000px) {
+        display: none;
+        
+    }
+}
 .trendingtitlecontainer{
     @include page;
     display: flex;
@@ -31,7 +37,7 @@
         text-transform: uppercase;
     }
 }
-#ktm{
+#ktm {
     @media screen and (max-width:1000px) {
         display: none;
     }
@@ -120,7 +126,6 @@ nav{
 }
 
 //Burgermenu
-
 .burgermenu{
 
     width: 40px;
@@ -133,33 +138,26 @@ nav{
             color: white;
             border: 2px solid white;
             border-radius: 5px;
+            @include trans;
         
         }
      @media screen and (max-width:768px) {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        
-     }   
+        align-items: center;
+        }   
 }
-#hamburger-12.active .line:nth-child(1){
-    opacity: 0;
-    -webkit-transform: translateX(-100%);
-    -ms-transform: translateX(-100%);
-    -o-transform: translateX(-100%);
-    transform: translateX(-100%);
-  }
-  
-  #hamburger-12.active .line:nth-child(3){
-    opacity: 0;
-    -webkit-transform: translateX(100%);
-    -ms-transform: translateX(100%);
-    -o-transform: translateX(100%);
-    transform: translateX(100%);
-  }
+.burgermenu:hover {
+    &:nth-of-type(1) {
 
-
-
+        transform: rotate(45deg);
+      }
+      &:nth-of-type(2) {
+        
+        transform: rotate(-45deg);
+      }
+}
 //logo responsive
 
 .logoresponsive{
