--- a/css/about/_about.scss
+++ b/css/about/_about.scss
@@ -39,7 +39,7 @@ hr{
 //ourbestservices
 
 .ourbestservices{
-    background: url(../../img/gallery/section_bg02.jpg);
+    background: url(../img/gallery/section_bg02.jpg);
     @include roboto;
     
 }
