--- a/css/pages/_firstblock.scss
+++ b/css/pages/_firstblock.scss
@@ -37,7 +37,7 @@
     }
     .business{
 
-    background: url(img/trending/trending_top02.jpg)center/cover no-repeat;
+    background: url(../img/trending/trending_top02.jpg)center/cover no-repeat;
       
 }
 
