--- a/css/layout/_global.scss
+++ b/css/layout/_global.scss
@@ -4,6 +4,11 @@ a{
 }
 .wrapper{
     @include page;
+    @media screen and (max-width:400px) {
+        width: 100%;
+        
+        
+    }
     
 }
 body{
@@ -32,3 +37,5 @@ box-shadow: 0px -5px 22px -3px rgba(0,0,0,1);
     }
 
 }
+
+
