--- a/css/pages/_firstblock.scss
+++ b/css/pages/_firstblock.scss
@@ -54,6 +54,7 @@
         font-family: 'Roboto', sans-serif;
         font-weight: 700;
         transition: .3s all ease-in-out;
+        cursor: pointer;
     }
     h1:hover{
         color: #ff2143 ;
